Added a database context and started working on repos

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=DESKTOP-BSC4G7I;Initial Catalog=Library Management;Integrated Security=True;Trust Server Certificate=True"
+    },
+    "AllowedHosts": "*"
 }
